实现Bot类可直接通过BotID构造实例，完成部分AccountAPI与MessageAPI。